# findaledge

./: .gitignore  README.md  README_ja.md  hello.py  pyproject.toml
docs/: architecture.md  function_spec.md  idea.md  impl_plan.md  request.md  requirements.md  usage_guide.md
examples/: agents_integration.py
src/findaledge/: __init__.py  embeddings_factory.py  tokenizer.py
src/findaledge/document_store/: bm25s.py  chroma.py  pinecone.py
src/finderledge/: __init__.py  bm25.py  document.py  document_loader.py  document_splitter.py  document_store.py  embedding.py  embedding_model.py  embedding_store.py  embeddings_factory.py  env.py  finder.py  finderledge.py  text_splitter.py  tokenizer.py  vector_document_store.py
src/finderledge/document_store/: chroma.py  faiss.py  vector_document_store.py
study/: bm25_inspect.py  bm25_persistence_sample.py  bm25_sample.py  document_loader_sample.py  embeddings_sample.py  hybrid_search_sample.py  openai_sample.py  persistence_sample.py  run_samples.py  sample.pptx  sample_langchain.txt  sample_markitdown.txt  sample_openai.txt  vector_search_sample.py
study/bm25_persist_dir/: corpus.json
study/bm25_sample_index/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
study/chroma_hybrid_db/: chroma.sqlite3
study/chroma_persist_dir/: chroma.sqlite3
study/hybrid_persist_dir/: metadata.json
study/hybrid_persist_dir/vector/: chroma.sqlite3
study/temp/: sample_text.txt
test_docs_new/: doc1.json  doc2.json  doc3.json
test_embeddings_new/: doc1.json  doc2.json  doc3.json
test_finder_new/: bm25.json
tests/: test_agents_integration.py  test_bm25.py  test_chroma.py  test_document.py  test_document_loader.py  test_document_splitter.py  test_embedding.py  test_embedding_model.py  test_embeddings_factory.py  test_faiss.py  test_finder.py  test_finderledge.py  test_pinecone.py  test_search.py  test_text_splitter.py  test_tokenizer.py
