[project]
name = "finderledge"
version = "0.1.0"
description = "文書コンテキスト管理ライブラリ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.0",
    "openai>=1.0.0",
    "chromadb>=0.4.18",
    "bm25s-j>=0.1.0",
    "langchain-openai>=0.3.9",
    "langchain-community>=0.3.20",
    "ollama>=0.4.7",
    "numpy>=2.2.4",
    "pydantic>=2.10.6",
    "oneenv>=0.1.5",
    "pillow>=11.1.0",
    "google-generativeai>=0.8.4",
    "pypdf>=5.4.0",
    "markitdown[all]>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--import-mode=importlib",
    "--cov=finderledge",
    "--cov-report=term-missing",
]
